src/app/header/header.component.css
input {
    border: none;
    width: 60px;
    background-color: none;
    margin: 0px;
}
.logo-input {
    display: flex;
    flex-direction: row;
    justify-content: center;
    align-items: center;
    font-family: 'Rubik', sans-serif;
}

/* .plus-logo {
    text-align: center;
    font-size: 1rem;
    background: -webkit-linear-gradient(#9999cd, #33999b);        
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    margin: 0px;
    font-family: 'Rubik', sans-serif;
} */

.small-logo {
    text-align: left;
    font-size: 2.1rem;
    background: -webkit-linear-gradient(#9999cd, #33999b);     
    color: #33999b;  
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
    margin: 0px;
    font-family: 'Rubik', sans-serif;
}

.navbar-dark-background {
    background-color: rgb(26,26,26);
}

.nav-link {
    color: white;
}

.nav-link:hover {
    color: #9999cd;
}

.dropdown-menu {
    margin-left: -98px;
    background-image: linear-gradient(to right, white, #9999cd);
    border:  none;
}

#navbarTogglerDemo02 {
    padding-left: 2%;
    padding-right: 2%;
    background-image: linear-gradient(to right, #8a8aff, white);
    z-index: 4;
    border:  none;
    margin: none;
}

.separator {
    border-top: 1px solid white;
}

.nav-pills .nav-link.active, .nav-pills .show>.nav-link {
    background-color: rgb(26,26,26);
}

@media (max-width: 768.05px) { 
    #navbar-example1 {
            background-color: rgb(26,26,26);
            position: fixed;
            z-index: 3;
            left: 0;
            right: 0;
            top: 0;
    }

    #formControlMobile {
        width: 60%;
    }

    #navbar-example2 {
        display: none;
    }
}

@media (min-width: 768.10px) { 
    #navbar-example1 {
        display: none;
}
#navbar-example2 {
    position: fixed;
    z-index: 2;
    left: 0;
    right: 0;
    top: 0;
}
}

